# ai-agent-to-learn-faster-and-better

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml  railway.json  requirements.txt  run_evals.py  run_server.py
.github/workflows/: ci.yml
docs/: COST_ANALYSIS.md  HOW_IT_WORKS.md  USER_GUIDE.md  VISUAL_WALKTHROUGH.md  ai_use_case.md  ai_use_case_trace.json  naval_eval_results.json  naval_eval_results.md  naval_use_case.md  naval_use_case_trace.json  worked_example_case_02.md
docs/traces/: ai_fresh.json  ai_fresh.md  ai_struggling.json  ai_struggling.md  case_02_struggling_use_socratic.json  case_02_struggling_use_socratic.md  case_06_prereq_gap_blocks_advance.json  case_06_prereq_gap_blocks_advance.md
docs/visual/: index.html
domains/: ai.md  cognitive_biases.md  computers.md  ethics.md  game_theory.md  mathematics.md  microeconomics.md  persuasion.md  psychology.md
evals/: results.json  results.md  runner.py
evals/fixtures/: poisoned_domain.md
evals/golden/: case_01_novice_start.json  case_02_struggling_use_socratic.json  case_03_mastered_basics_practice.json  case_04_step_down_overwhelmed.json  case_05_interleave_confusables.json  case_06_prereq_gap_blocks_advance.json
evals/judges/: __init__.py  (+3 more)
scripts/: ai_demo.py  capture_visual.mjs  capture_visual_ai.mjs  cost_analysis.py  evaluate_naval.py  grounded_demo.py  naval_demo.py
src/: llm.py  schemas.py  trace.py
tests/: test_deploy_guards.py  test_harness.py  test_redteam_ingestion.py  test_redteam_learner_input.py  test_retriever.py
(+20 files in other folders)
