[project]
name = "adaptive-learning-agent"
version = "0.1.0"
description = "An agent that learns how a person learns — adaptive, learning-science-grounded pedagogy with a first-class eval harness."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6"]
# Opt-in observability: enable with LANGSMITH_TRACING=true (see src/llm.py).
tracing = ["langsmith>=0.1"]

[tool.ruff]
line-length = 100
target-version = "py310"
# scripts/ holds manually-run demos, not part of the shipped package
# (see tool.setuptools below); lint the library, tests, and evals.
extend-exclude = ["scripts"]

[tool.ruff.lint]
# E501 (line length) off — prompt strings are intentionally prose-shaped.
ignore = ["E501"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "evals*"]
